Modify basic formatting

--- a/src/custom.css
+++ b/src/custom.css
@@ -146,6 +146,7 @@ h5 { font-size: 100% !important; }
     color: inherit;
     padding-right: 0.4em;
     margin-bottom: 0.2em !important;
+    display: none;
 }
 
 /* Main content */
@@ -160,6 +161,10 @@ h5 { font-size: 100% !important; }
     justify-content: space-between;
     flex-direction: column;
     align-items: stretch;
+}
+
+.header-section-number {
+    display: none;
 }
 
 .main-content-wrapper { padding-bottom: 15%; }
@@ -298,6 +303,42 @@ h5 { font-size: 100% !important; }
 
 .note-box p {
     color: #444444;
+    margin: 0 !important;
+}
+
+.code-box {
+    background: #ffe1cd;
+    padding: 10px;
+    border: none;
+    margin-bottom: 1rem;
+}
+
+.code-box p {
+    color: #444444;
+    margin: 0 !important;
+}
+
+.file-content-box {
+    background: #eeeeee;
+    padding: 10px;
+    border: none;
+    margin-bottom: 1rem;
+}
+
+.file-content-box p {
+    color: #444444;
+    margin: 0 !important;
+}
+
+.commandline-box {
+    background: #ab8b9b;
+    padding: 10px;
+    border: none;
+    margin-bottom: 1rem;
+}
+
+.commandline-box p {
+    color: #fbfbfb;
     margin: 0 !important;
 }
 
